--- a/BasiliskII/src/Windows/BasiliskII.vcxproj
+++ b/BasiliskII/src/Windows/BasiliskII.vcxproj
@@ -56,6 +56,7 @@
     <ClCompile Include="..\scsi.cpp" />
     <ClCompile Include="..\SDL\audio_sdl.cpp" />
     <ClCompile Include="..\SDL\video_sdl.cpp" />
+    <ClCompile Include="..\SDL\video_sdl2.cpp" />
     <ClCompile Include="..\serial.cpp" />
     <ClCompile Include="..\slirp\bootp.c" />
     <ClCompile Include="..\slirp\cksum.c" />
