--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ matrix:
 addons:
   apt:
     packages:
-      - libsdl1.2-dev 
+      - libsdl1.2-dev
       - libgtk2.0-dev
 
 script:
-  - cd BasiliskII/src/Unix
+  - cd src/Unix
   - NO_CONFIGURE=1 ./autogen.sh
   - ./configure --enable-sdl-video --enable-sdl-audio --disable-vosf --disable-jit-compiler --with-x --with-gtk --with-mon
   - make -j 4
