--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,18 @@ matrix:
       dist: trusty
       sudo: required
       compiler: gcc
-
-addons:
-  apt:
-    packages:
-      - libsdl1.2-dev
-      - libgtk2.0-dev
-
-script:
-  - cd src/Unix
-  - NO_CONFIGURE=1 ./autogen.sh
-  - ./configure --enable-sdl-video --enable-sdl-audio --disable-vosf --disable-jit-compiler --with-x --with-gtk --with-mon
-  - make -j 4
+      env: BADGE=linux
+      addons:
+        apt:
+          packages:
+            - libsdl1.2-dev
+            - libgtk2.0-dev
+      script:
+        - cd src/Unix
+        - NO_CONFIGURE=1 ./autogen.sh
+        - ./configure --enable-sdl-video --enable-sdl-audio --disable-vosf --disable-jit-compiler --with-x --with-gtk --with-mon
+        - make -j 4
+    - os: osx
+      env: BADGE=osx
+      script:
+        - true
